Fixed Homepage to properly align stuff

--- a/style.css
+++ b/style.css
@@ -210,7 +210,7 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 35%;
+    text-align: center;
   }
 
   .Glass-Panel{
